[project]
name = "rag-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[project.scripts]
rag-learn = "rag_learn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
